<resources>
    <string name="app_name">FridgExpert</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="consumption_detail_per">Consumption Data - Percentages</string>
    <string name="consumption_detail_ser">Consumption Data - Servings</string>
    <string name="nutrition_detail_list">Nutrition Data - List</string>
    <string name="nutrition_detail_per">Nutrition Data - Percentages</string>
    <string name="activity_waste">Waste Information</string>

    <string name="description">Data to View: </string>
    <string name="disclaimer">*Disclaimer</string>
    <string name="activity_disclaimer">Disclaimer</string>
    <string name="percentages_view">View Percentages</string>
    <string name="servings_view">View Servings</string>
    <string name="list_view">View List</string>
    <string name="waste_view">Waste</string>
    <string name="image_credits">Image Credits</string>
    <string name="save_graph">Save Graph</string>

    <string name="addFood">Add Food</string>
    <string name="seeFridge">See Fridge</string>
    <string name="consumptionStats">Consumption Stats</string>
    <string name="nutritionStats">Nutrition Stats</string>
    <string name="settings">Settings</string>
    <string name="percentage">Percentage</string>
    <string name="servings">Servings</string>
    <string name="food_group">Food Group</string>
    <string name="food_groups">Food Groups</string>
    <string name="nutritional_categories">Nutritional Categories</string>

    <string-array name="view_options">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>


    <string name="test_menu_option">TestOption</string>
    <string name="title_activity_nutritional_detail">Nutritional Details</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!--<string name="exp_notif">Expiration Notifications</string>-->
    <!--<string name="exp_notif_key"></string>-->

    <!--title of the setting-->
    <string name="pref_sort_label">Sort by</string>
    <!--key that identifies the setting-->
    <string name="pref_sort_key">sort</string>
    <!--default sort by selected-->
    <!--<string name="pref_default_sort">Name</string>-->

    <!--the label of the user visible options for "sort by"-->
    <string name="pref_sort_label_name">Name</string>
    <string name="pref_sort_label_price">Price</string>
    <string name="pref_sort_label_exp">Expiration Date</string>
    <string name="pref_sort_label_purch">Purchase Date</string>

    <!--the backend name of the options for "sort by"-->
    <string name="pref_sort_name">name</string>
    <string name="pref_sort_price">price</string>
    <string name="pref_sort_exp">expiration</string>
    <string name="pref_sort_purch">purchase</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Expiration Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Disabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="ok_label">OK</string>
    <string name="cancel_label">Cancel</string>
    <string name="eat_label">Eat</string>
    <string name="trash_label">Trash</string>
    <string name="title_activity_input_menu">InputMenuActivity</string>

    <string name="manual_input">Manually Input Food</string>
    <string name="existing_input">Add To Existing Food</string>
    <string name="barcode_input">Scan Barcode</string>
    <string name="receipt_input">Use Picture of Receipt</string>
    <string name="title_activity_manual_input">ManualInputActivity</string>
    <string name="title_activity_existing_input">ExistingInputActivity</string>

    <string name="add_to_label">Adding to:</string>
    <string name="food_name_label">Name*:</string>
    <string name="quantity_label">Quantity*:</string>
    <string name="purchased_by_label">Bought*:</string>
    <string name="expires_by_label">Expires*:</string>
    <string name="foodgroup_label">Food Group*:</string>
    <string name="total_cost_label">Total Cost*:</string>
    <string name="calories_label">Calories*:</string>
    <string name="total_fat_label">Total Fat:</string>
    <string name="saturated_fat_label">Saturated Fat:</string>
    <string name="trans_fat_label">Trans Fat:</string>
    <string name="cholesterol_label">Cholesterol:</string>
    <string name="sodium_label">Sodium:</string>
    <string name="total_carbs_label">Total Carbs:</string>
    <string name="sugar_label">Sugar:</string>
    <string name="protein_label">Protein:</string>
    <string name="consumed_by_label">Consumed*:</string>
    <string name="thrown_by_label">Thrown*:</string>

    <string-array name="table_array">
        <item>Current</item>
        <item>Consumed</item>
        <item>Thrown</item>
    </string-array>

    <string-array name="quantity_array">
        <item>g</item>
        <item>mg</item>
        <item>lg</item>
        <item>med</item>
        <item>sm</item>
        <item>lbs</item>
        <item>cups</item>
    </string-array>

    <string name="grams">g</string>
    <string name="milligrams">mg</string>

    <string name="addButton">Add Food</string>

    <string name="quantity_error">Required Field</string>
    <string name="purchased_by_error">Invalid Date Entered</string>
    <string name="expires_by_error">Invalid Date Entered</string>
    <string name="total_cost_error">Cost must be a dollar value</string>
    <string name="calories_error">Required Field</string>
    <string name="total_fat_error">Total Fat must be a number</string>
    <string name="saturated_fat_error">Saturated Fat must be a number</string>
    <string name="trans_fat_error">Trans Fat must be a number</string>
    <string name="cholesterol_error">Cholesterol must be a number</string>
    <string name="sodium_error">Sodium must be a number</string>
    <string name="total_carbs_error">Total Carbs must be a number</string>
    <string name="sugar_error">Sugar must be a number</string>
    <string name="protein_error">Protein must be a number</string>
    <string name="consumed_by_error">Invalid Date Entered</string>
    <string name="thrown_by_error">Invalid Date Entered</string>

    <string-array name="food_groups">
        <item>Dairy</item>
        <item>Fruit</item>
        <item>Grains</item>
        <item>Liquid</item>
        <item>Vegetable</item>
        <item>Protein</item>
    </string-array>

    <string name="existing_prompt">Add foods you recently added, ate, or threw away</string>
    <string name="title_activity_receipt_input">ReceiptInputActivity</string>

</resources>
