<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--Going to put sort by in the Fridge activity instead-->
    <!--<ListPreference-->
        <!--android:title="@string/pref_sort_label"-->
        <!--android:key="@string/pref_sort_key"-->
        <!--android:defaultValue="@string/pref_sort_name"-->
        <!--android:entryValues="@array/pref_sort_values"-->
        <!--android:entries="@array/pref_sort_options" />-->

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />


</PreferenceScreen>