<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addFood"
        android:id="@+id/button2"
        android:layout_gravity="center"
        android:onClick="foodView"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seeFridge"
        android:id="@+id/button3"
        android:layout_gravity="center"
        android:onClick="fridgeView"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consumptionStats"
        android:id="@+id/button4"
        android:layout_gravity="center"
        android:onClick="consumptionView"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nutritionStats"
        android:id="@+id/button5"
        android:layout_gravity="center"
        android:onClick="nutritionView"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/button6"
        android:layout_gravity="center"
        android:onClick="settingsView"/>

</LinearLayout>