<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    android:paddingBottom="150dp"
    android:paddingLeft="50dp"
    android:paddingTop="50dp"
    android:paddingRight="50dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:paddingBottom="5dp">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@drawable/pencil125"
            android:textColor="#000000"
            android:id="@+id/addFoodButton"
            android:layout_weight=".5"
            android:onClick="manualView"
            android:text="@string/manual_input"
            android:layout_marginRight="10dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@drawable/plus24"
            android:textColor="#000000"
            android:id="@+id/addToExistingButton"
            android:layout_weight=".5"
            android:onClick="existingView"
            android:text="@string/existing_input"
            android:layout_marginLeft="10dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight="1"

        >

        <Button
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@drawable/product3"
            android:textColor="#000000"
            android:id="@+id/barcodeButton"
            android:layout_weight=".5"
            android:onClick="featureNotImplemented"
            android:text="@string/barcode_input"
            android:layout_marginRight="10dp"
            android:paddingRight="20dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@drawable/receipt9"
            android:textColor="#000000"
            android:id="@+id/receiptButton"
            android:layout_weight=".5"
            android:onClick="receiptView"
            android:text="@string/receipt_input"
            android:layout_marginLeft="10dp"
            android:paddingLeft="20dp"/>


    </LinearLayout>


</LinearLayout>

